# wasm-experiments

./: README.md
go-lib/: build-wasm.sh  fib_thread.go  main.go
node-app/: .env.default  app.js  db-service.js  package-lock.json  package.json
node-app/public/: charts.html  functions.js  go.wasm  index.css  index.html  index2.html  input-generators.js  main.wasm  run-service.js
rust-lib/: Cargo.toml
rust-lib/pkg/: package.json  rust_02.d.ts  rust_02.js  rust_02_bg.js  rust_02_bg.wasm  rust_02_bg.wasm.d.ts
rust-lib/src/: lib.rs
